# qt-inside-ios-native

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  main.cpp
ios/: CMakeLists.txt  Info.plist  ViewController.m  ViewController.mm  main.m
qt/: CMakeLists.txt  main.cpp  main.h  main.mm  widget.cpp  widget.h
