cmake_minimum_required(VERSION 3.19)

project(qt-inside-ios-native
	VERSION 1.0
	LANGUAGES CXX OBJC OBJCXX
)

if(IOS)
	option(EMBEDDED_QT_APP "Embed Qt app inside iOS native app" ON)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT[variant=Debug] dwarf)
set(CMAKE_XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.kambala.$(PRODUCT_NAME)")
set(CMAKE_XCODE_ATTRIBUTE_MARKETING_VERSION ${PROJECT_VERSION})

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

add_subdirectory(qt)
if(IOS)
	set(CMAKE_XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2") # iPhone + iPad
	add_subdirectory(ios)
endif()
